<resources>
    <string name="app_name">Pulse</string>
    <string name="name">Комплексная система мониторинга здоровья</string>
    <string name="line_name">Введите ФИО</string>
    <string name="old">Введите возраст</string>
    <string name="btn">Сохранить</string>
    <string name="line_high_press">Введите верхнее давление</string>
    <string name="line_low_press">Введите нижнее давление</string>
    <string name="line_pulse">Введите пульс</string>
    <string name="line_data">Введите дату</string>
    <string name="line_time">Введите время</string>
    <string name="line_tah">Есть ли у вас такихардия ?</string>
    <string name="line_m">Введите свой вес</string>
    <string name="line_step">Введите количество шагов</string>
    <string name="line_behind">Назад</string>
    <string name="btn_life">Жизненные показатели</string>
    <string name="btn_press">Показатели давления</string>
    <string name="log">Это мое сообщение для записи в журнале</string>
    <string name="log_exception">Получено исключение</string>
    <string name="correct_info">Введите правильные данные</string>
    <string name="saved_info">Данные сохранены</string>
    <string name="tah">Тахикардии есть</string>
    <string name="no_tah">Такихардия нет</string>
    <string name="hello">Добро пожаловать,</string>
    <string name="joke">Кто это такой этот ваш ковбой Биба</string>
</resources>
