<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PressureActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="0dp"
        android:layout_height="406dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/high_press"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/line_high_press"
            android:inputType="number" />

        <EditText
            android:id="@+id/low_press"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="@string/line_low_press"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_pulse"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:ems="10"
            android:hint="@string/line_pulse"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="@string/line_data"
            android:inputType="date" />

        <EditText
            android:id="@+id/edit_text_six"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="@string/line_time"
            android:inputType="time" />

        <TextView
            android:id="@+id/text_tah"
            android:layout_width="133dp"
            android:layout_height="40dp"
            android:text="@string/line_tah" />

        <CheckBox
            android:id="@+id/check_box_three"
            android:layout_width="46dp"
            android:layout_height="42dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="158dp"
            android:layout_height="40dp"
            android:text="@string/btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>