<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="149dp"
        android:layout_height="144dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_four"
        app:layout_constraintEnd_toStartOf="@+id/text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="261dp"
        android:layout_height="100dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="60dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/name" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="291dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btn"
        app:layout_constraintBottom_toTopOf="@+id/btn_pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_four" />

    <Button
        android:id="@+id/btn_pressure"
        android:layout_width="293dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:text="@string/btn_press"
        app:layout_constraintBottom_toTopOf="@+id/btn_life"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_save" />

    <Button
        android:id="@+id/btn_life"
        android:layout_width="295dp"
        android:layout_height="0dp"
        android:layout_marginBottom="207dp"
        android:text="@string/btn_life"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pressure" />

    <LinearLayout
        android:id="@+id/linear_layout_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="396dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view">

        <EditText
            android:id="@+id/line_old"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:ems="10"
            android:hint="@string/old"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/line_name"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/line_name"
            android:inputType="textPersonName" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>